--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
 
 body {
-	background-image: url("./imagens/fundo.png");
+	background: url("./imagens/fundo.png");
 	font-family: 'Roboto', sans-serif;
 
 }
